--- a/docs/zh-CN/01.快速开始.md
+++ b/docs/zh-CN/01.快速开始.md
@@ -1,6 +1,6 @@
 # 快速开始
 
-我们贴心为开发者准备了一个[【开发脚手架：https://github.com/xielei/project】](https://github.com/xielei/project)，1分钟快速开始~
+我们贴心为开发者准备了一个[【开发脚手架：https://github.com/xiaonian0430/demo_server_php_swoole_gateway.git】](https://github.com/xiaonian0430/demo_server_php_swoole_gateway.git)，1分钟快速开始~
 
 正式开发项目也建议直接使用该脚手架开始编码~
 
